<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HutcService</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="txt_login">登陆</string>    
    <string name="txt_username" >用  户  名：</string>
    <string name="txt_password" >密        码：</string>
    <string name="txt_confirmpassword" >确认密码：</string>
    <string name="txt_hintname">请输入用户名</string>
    <string name="txt_hintpass">请输入密码</string>
    <string name="txt_rememberpass">记住密码</string>
    <string name="txt_autologin">自动登陆</string>
    <string name="txt_twohand">二手交易</string>
    <string name="txt_tosale">卖东西</string>
    <string name="txt_bike">自行车</string> 
    <string name="product_title">标题：</string>
    <string name="product_price">价格</string>
    <string name="txt_inputtype">类型：</string>
    <string name="txt_inputtitle">标题：</string>
    <string name="txt_inputcontent">描述：</string>
    <string name="txt_inputprice">价格：</string>
    <string name="txt_inputlinkman">联系人：</string>
    <string name="txt_inputlinkphone">电话：</string>
    <string name="txt_inputlinkqq">QQ：</string>
    <string name="txt_publishimfor">发布信息</string>
    <string name="txt_logout">注销用户</string>
    <string name="txt_selfcenter">个人中心</string>
    <string name="txt_myimformation">我的个人信息</string>
    <string name="txt_mysecondimformation">我的二手信息</string>
    <string name="txt_goodman">我的好人好事</string>
    <string name="txt_aboutus">关于系统</string>
    <string name="txt_linkus">联系我们</string>
    <string name="txt_mypublish">我的发布</string>
    <string name="txt_goodmantype">类别</string>
    <string name="txt_myqiugou">我的求购</string>
    <string name="txt_qiugouzhuanqu">求购专区</string>
    <string name="txt_fabutime">发布时间</string>
    <string name="txt_mygoodthings">我的好人好事</string>
    <string name="txt_imformationservice">信息服务</string>
    
    <string name="hint_inputtitle">请输入标题不超过15字</string>
    <string name="hint_inputcontent">请输入描述不超过39字</string>
    <string name="hint_inputprice">请输入价格</string>
    <string name="hint_inputlinkman">请输入联系人</string>
    <string name="hint_inputlinkphone">请输入联系人电话</string>
    <string name="hint_inputlinkqq">请输入联系人qq</string>
    
     <string name="btn_register">注册</string>
     <string name="btn_back">后退</string>
     <string name="btn_personalcenter">个人中心</string>
     <string name="btn_system">关于系统</string>
     <string name="btn_publish">发布</string>
      
     
</resources>
