<?xml version="1.0" encoding="UTF-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    
    >
    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp"
        android:background="@drawable/titleback_ground">
        <Button
            android:id="@+id/btn_back"
            style="@style/style_back"
            android:onClick="onClick">        
        </Button>
        <TextView 
            android:id="@+id/txt_title" 
            android:text="@string/txt_login"
            style="@style/style_title"            
            />
        <Button
            android:id="@+id/btn_register" 
                   
            style="@style/style_register"
            android:onClick="onClick"
            >        
        </Button>
    </RelativeLayout>
    <TableLayout
        android:id="@+id/loginimfor" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbar"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/set_background"
        >
        <TableRow 
             android:layout_margin="8dp"
             
          >
           <TextView
               android:layout_width="wrap_content"
                android:layout_height="50dp" 
               android:text="@string/txt_username"/>
           <EditText
               android:id="@+id/username"
               android:layout_width="180dp"
               android:maxLength="16"
                android:layout_height="50dp" 
               android:background="@null"
               android:hint="@string/txt_hintname">     
           </EditText>
        </TableRow>
         <View
            android:layout_width="fill_parent"
            android:layout_height="0.04dp"
            android:background="#778899" />
        <TableRow 
            android:layout_margin="8dp">
           <TextView
               android:layout_width="wrap_content"
               android:layout_height="50dp" 
               android:layout_marginLeft="8dp" 
               android:text="@string/txt_password"/>
           <EditText
               android:id="@+id/password"
                android:inputType="textPassword"
                android:layout_height="50dp" 
                android:background="@null"
               android:hint="@string/txt_hintpass">
               
           </EditText>
        </TableRow>
       
    </TableLayout> 
    
    <LinearLayout 
        android:id="@+id/rememberPass"
        android:layout_width="fill_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal"       
        android:layout_height="30dp"
         android:layout_below="@id/loginimfor"
        >

        <CheckBox
            android:id="@+id/cb_rememberPass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:text="@string/txt_rememberpass" />

        <CheckBox
            android:id="@+id/cb_autoLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/txt_autologin" />
        
    </LinearLayout> 
 
    <LinearLayout 
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rememberPass"
            android:layout_margin="8dp">
        <Button 
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_login"/>
        
    </LinearLayout>  
</RelativeLayout>