<?xml version="1.0" encoding="UTF-8"?>
<!--个人中心  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/topbar"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_marginBottom="3dp"
         android:background="@drawable/titleback_ground"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_back"
            style="@style/style_back"
            android:onClick="onClick" >
        </Button>

        <TextView
            android:id="@+id/txt_selfcentertitle"
            style="@style/style_title"
            android:text="@string/txt_selfcenter" />

        <Button
            android:id="@+id/btn_logout"
            style="@style/style_register"
            android:onClick="onClick"
            android:text="@string/txt_logout" >
        </Button>
    </RelativeLayout>
    
     <LinearLayout
        android:orientation="vertical"
        android:id="@+id/selfcentermain"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbar"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/set_background"
        >
       

       
         <RelativeLayout 
             android:orientation="horizontal"
             android:onClick="onClick"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            style="@style/selfcenter"
             android:id="@+id/mysecondhand"
             >
              <TextView
                  android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
               android:text="@string/txt_mysecondimformation"/>
              <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/in1" ></ImageView>
         </RelativeLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="0.04dp"
            android:background="#778899" />
         <RelativeLayout 
             android:orientation="horizontal"
             android:onClick="onClick"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:clickable="true"
            android:gravity="center_vertical"
            style="@style/selfcenter"
             android:id="@+id/myqiugou"
             >
              <TextView
                  android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
               android:text="@string/txt_myqiugou"/>
              <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                android:layout_marginTop="5dp"
                android:src="@drawable/in1" ></ImageView>
         </RelativeLayout>
       
         <View
            android:layout_width="fill_parent"
            android:layout_height="0.04dp"
            android:background="#778899" />
        <RelativeLayout 
            android:id="@+id/mygoodman"
            android:onClick="onClick"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:clickable="true"
             android:gravity="center_vertical"
            style="@style/selfcenter">
            <TextView
                 android:layout_centerVertical="true"
                android:layout_marginLeft="8dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
               android:text="@string/txt_goodman"/>
              <ImageView
                android:layout_centerVertical="true"
                android:layout_alignParentRight="true"
                android:layout_width="12dp"
                android:layout_height="12dp"
                android:layout_gravity="right"
                android:layout_marginRight="5dp"
                  android:layout_marginTop="5dp"
                android:src="@drawable/in1" ></ImageView>
        </RelativeLayout>
  </LinearLayout>
    <ProgressBar 
        android:id="@+id/bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</RelativeLayout>
