<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/mss"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:orientation="horizontal"
        android:layout_marginBottom="3dp"
        android:background="@drawable/titleback_ground" >

        <Button
            android:id="@+id/btn_back"
            style="@style/style_back"
            android:onClick="onClick"
            android:text="@string/btn_back" />

        <TextView
            android:id="@+id/txt_show_title"
            style="@style/style_title"
            android:text="详情" />

      
    </RelativeLayout>

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/mss"
        android:layout_marginBottom="50dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            
            <LinearLayout
                android:layout_width="99dp"
                android:layout_height="99dp"
                android:layout_marginTop="3dp"
                android:layout_gravity="center_horizontal"
                android:orientation="horizontal">"
                 <ImageView
            android:id="@+id/stuff_image"
            android:layout_width="99dp"
            android:layout_height="99dp"
            android:scaleType="fitXY"
            android:src="@drawable/default_bike"
             />
            </LinearLayout>
           
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="30dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/product_one_title1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/product_title"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_one_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:background="#eaeaea" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/product_one_price1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/product_price"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_one_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="￥16 元"
                    android:textColor="@drawable/red"
                    android:textSize="13sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:background="#eaeaea" />
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/product_one_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_fabutime"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_one_time1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="2dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp" />
            </LinearLayout>
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/product_one_linkman1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_inputlinkman"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_one_linkman"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="2dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp" />
            </LinearLayout>
             <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/product_one_linkphone1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_inputlinkphone"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_one_linkphone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="2dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/product_one_linkQQ1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_inputlinkqq"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_one_linkQQ"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="2dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp" />
            </LinearLayout>
            
           <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginTop="12dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/product_one_content1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/txt_inputcontent"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/product_one_content"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginTop="2dp"
                    android:lineSpacingExtra="6dp"
                    android:textSize="14sp" />
            </LinearLayout>
            
        </LinearLayout>
    </ScrollView>

    
   <RelativeLayout 
        android:layout_alignParentBottom="true"
        android:layout_height="match_parent"
        android:layout_width="fill_parent"
        android:id="@+id/foot">
        <Button
            android:id="@+id/btn_oneCall"
            style="@style/oneCall"
            android:onClick="onClick"/>
        <Button
            android:id="@+id/btn_oneShortMassage"
            style="@style/oneShortMassage"
            android:onClick="onClick"/>
    </RelativeLayout>  

</RelativeLayout>